# k4004

./: README.md  requirements.md
assembler/source/: assembler.hpp  conversions.cpp  main.cpp  tokenizer.hpp
docs/: 4BIT_TO_8BIT_INTERFACE.md  ARCHITECTURE.md  CHIP_AUDIT_RESULTS.md  COMPREHENSIVE_VALIDATION_REPORT.md  CYCLE_TIMING_SPECIFICATION.md  HARDWARE_ROADMAP.md  INSTRUCTION_AUDIT_SUMMARY.md  INSTRUCTION_LEVEL_AUDIT.md  INSTRUCTION_VERIFICATION_RESULTS.md  OPTIMAL_PATH_FORWARD.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_SCOPE_AND_PLAN.md  PHASE_4_AND_ARCHITECTURE_PLAN.md  PHASE_4_BUSICOM_INTEGRATION.md  SESSION_COMPLETE_100_PERCENT.md  TECHNICAL_AUDIT.md
docs/specs/: INTEL_4004_SPECIFICATIONS.md  INTEL_4040_SPECIFICATIONS.md  README.md
emulator_core/source/: CMakeLists.txt  Intel8255.cpp  Intel8255.hpp  K4003.cpp  K4003.hpp  K4004.cpp  K4004.hpp  K4008.cpp  K4008.hpp  K4009.cpp  K4009.hpp  K4040.cpp  K4040.hpp  K4101.cpp  K4101.hpp  K4201A.cpp  K4201A.hpp  K4289.cpp  K4289.hpp  K4308.cpp  K4308.hpp  K4702.cpp  K4702.hpp  MatrixKeyboard.cpp  MatrixKeyboard.hpp  SevenSegmentDisplay.cpp  SevenSegmentDisplay.hpp  address12.hpp  ascii_hex_parser.cpp  ascii_hex_parser.hpp  busicom_peripherals.cpp  busicom_peripherals.hpp  emulator.hpp  instructions.cpp  instructions.hpp  nibble.hpp  nibble_array.hpp  nibble_pair.hpp  rom.cpp  rom.hpp
emulator_core/tests/: CMakeLists.txt  busicom_integration_tests.cpp  busicom_peripheral_tests.cpp  cycle_timing_tests.cpp  instruction_audit_tests.cpp  instructions_tests.cpp  intel8255_tests.cpp  k4003_tests.cpp  k4008_k4009_tests.cpp  k4101_tests.cpp  k4201a_tests.cpp  k4289_tests.cpp  k4308_tests.cpp  k4702_tests.cpp  matrix_keyboard_tests.cpp  nibble_tests.cpp  peripheral_integration_tests.cpp  rom_io_tests.cpp  seven_segment_tests.cpp
programs/examples/: 01_binary_counter.asm  02_bcd_calculator.asm  03_keyboard_scanner.asm  04_led_pattern.asm  05_seven_segment_display.asm  README.md
