set(K4004_EMULATOR_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/emulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/emulator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/instructions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/instructions.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4040.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4040.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ram.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ram.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4003.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4003.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4101.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4101.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4201A.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4201A.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4008.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4008.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4009.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4009.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4289.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4289.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4308.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4308.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4702.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4702.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SevenSegmentDisplay.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SevenSegmentDisplay.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MatrixKeyboard.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MatrixKeyboard.hpp
    ${SHARED_DIR}/source/assembly.cpp
    ${SHARED_DIR}/source/assembly.hpp
)

add_library(${TARGET_EMULATOR_LIB_NAME} STATIC ${K4004_EMULATOR_SOURCES})
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${K4004_EMULATOR_SOURCES})

target_include_directories(${TARGET_EMULATOR_LIB_NAME} PUBLIC
    ${CMAKE_SOURCE_DIR}
)

target_link_libraries(${TARGET_EMULATOR_LIB_NAME} PRIVATE
    ${TARGET_ASSEMBLER_LIB_NAME}
)

set_target_properties(${TARGET_EMULATOR_LIB_NAME} PROPERTIES FOLDER emulator)
